libs/LeviathanScriptEngine/antlr/com/rift/dip/leviathan/LeviathanParser.java
// $ANTLR 3.4 /home/brett/Development/dipforge/dipforge/libs/LeviathanScriptEngine/src/com/rift/dipforge/ls/parser/Leviathan.g 2012-04-05 15:07:18

  package com.rift.dip.leviathan;
  
  import com.rift.dipforge.ls.parser.obj.LsAnnotation;
  import com.rift.dipforge.ls.parser.obj.Assignment;
  import com.rift.dipforge.ls.parser.obj.TypeDefinition;
  import com.rift.dipforge.ls.parser.obj.Workflow;
  import com.rift.dipforge.ls.parser.obj.Expression;
  import com.rift.dipforge.ls.parser.obj.Relation;
  import com.rift.dipforge.ls.parser.obj.Operation;
  import com.rift.dipforge.ls.parser.obj.CallStatement;
  import com.rift.dipforge.ls.parser.obj.Variable;
  import com.rift.dipforge.ls.parser.obj.Statement;
  import com.rift.dipforge.ls.parser.obj.StatementArgument;
  import com.rift.dipforge.ls.parser.obj.LsListArgument;
  import com.rift.dipforge.ls.parser.obj.ParameterArgument;
  import com.rift.dipforge.ls.parser.obj.Block;
  import com.rift.dipforge.ls.parser.obj.LsList;
  import com.rift.dipforge.ls.parser.obj.MethodDefinition;
  import com.rift.dipforge.ls.parser.obj.Types;
  import com.rift.dipforge.ls.parser.obj.ReturnStatement;
  import com.rift.dipforge.ls.parser.obj.ContinueStatement;
  import com.rift.dipforge.ls.parser.obj.BreakStatement;
  import com.rift.dipforge.ls.parser.obj.IfStatement;
  import com.rift.dipforge.ls.parser.obj.WhileStatement;
  import com.rift.dipforge.ls.parser.obj.ForStatement;
  import com.rift.dipforge.ls.parser.obj.CaseStatement;
  import com.rift.dipforge.ls.parser.obj.IncrementStatement;
  import com.rift.dipforge.ls.parser.obj.NegationStatement;
  import com.rift.dipforge.ls.parser.obj.UnaryStatement;
  import com.rift.dipforge.ls.parser.obj.MultStatement;
  import com.rift.dipforge.ls.parser.obj.AddStatement;
  import com.rift.dipforge.ls.parser.obj.Comparison;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked"})
public class LeviathanParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "COMMENT", "FLOAT", "IDENT", "INCREMENTER", "INTEGER", "LINE_COMMENT", "STRING", "WHITESPACE", "'!'", "'!='", "'%'", "'&&'", "'('", "')'", "'*'", "'+'", "','", "'-'", "'.'", "'/'", "':'", "';'", "'<'", "'<='", "'='", "'=='", "'>'", "'>='", "'@'", "'String'", "'['", "']'", "'break'", "'byte'", "'char'", "'continue'", "'def'", "'double'", "'else'", "'float'", "'flow'", "'for'", "'if'", "'int'", "'long'", "'return'", "'void'", "'while'", "'{'", "'||'", "'}'"
    };

    public static final int EOF=-1;
    public static final int T__12=12;
    public static final int T__13=13;
    public static final int T__14=14;
    public static final int T__15=15;
    public static final int T__16=16;
    public static final int T__17=17;
    public static final int T__18=18;
    public static final int T__19=19;
    public static final int T__20=20;
    public static final int T__21=21;
    public static final int T__22=22;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int T__50=50;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int COMMENT=4;
    public static final int FLOAT=5;
    public static final int IDENT=6;
    public static final int INCREMENTER=7;
    public static final int INTEGER=8;
    public static final int LINE_COMMENT=9;
    public static final int STRING=10;
    public static final int WHITESPACE=11;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public LeviathanParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public LeviathanParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

    public String[] getTokenNames() { return LeviathanParser.tokenNames; }
    public String getGrammarFileName() { return "/home/brett/Development/dipforge/dipforge/libs/LeviathanScriptEngine/src/com/rift/dipforge/ls/parser/Leviathan.g"; }


      
      private Workflow workflow;
      private String workflowName;
      private Block currentBlock;
      
      
      
      public Workflow getWorkflow() {
        return workflow;
      }



    // $ANTLR start "workflow"
    // /home/brett/Development/dipforge/dipforge/libs/LeviathanScriptEngine/src/com/rift/dipforge/ls/parser/Leviathan.g:92:1: workflow returns [Workflow value] : (anno= annotation )* 'flow' flowName= IDENT '{' ( variable ( assignment )? )* (meth1= method )* blo= block (meth2= method )* '}' ;
    public final Workflow workflow() throws RecognitionException {
        Workflow value = null;


        Token flowName=null;
        LsAnnotation anno =null;

        MethodDefinition meth1 =null;

        Block blo =null;

        MethodDefinition meth2 =null;

        Variable variable1 =null;

        Assignment assignment2 =null;


        try {
            // /home/brett/Development/dipforge/dipforge/libs/LeviathanScriptEngine/src/com/rift/dipforge/ls/parser/Leviathan.g:93:3: ( (anno= annotation )* 'flow' flowName= IDENT '{' ( variable ( assignment )? )* (meth1= method )* blo= block (meth2= method )* '}' )
            // /home/brett/Development/dipforge/dipforge/libs/LeviathanScriptEngine/src/com/rift/dipforge/ls/parser/Leviathan.g:93:5: (anno= annotation )* 'flow' flowName= IDENT '{' ( variable ( assignment )? )* (meth1= method )* blo= block (meth2= method )* '}'
            {

                value = new Workflow();
                currentBlock = value;
                

            // /home/brett/Development/dipforge/dipforge/libs/LeviathanScriptEngine/src/com/rift/dipforge/ls/parser/Leviathan.g:98:4: (anno= annotation )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==32) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // /home/brett/Development/dipforge/dipforge/libs/LeviathanScriptEngine/src/com/rift/dipforge/ls/parser/Leviathan.g:98:5: anno= annotation
            	    {
            	    pushFollow(FOLLOW_annotation_in_workflow66);
            	    anno=annotation();

            	    state._fsp--;


            	    value.getAnnotations().add(anno);

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            match(input,44,FOLLOW_44_in_workflow76); 

            flowName=(Token)match(input,IDENT,FOLLOW_IDENT_in_workflow80); 

             value.setName((flowName!=null?flowName.getText():null));

            match(input,52,FOLLOW_52_in_workflow87); 

            // /home/brett/Development/dipforge/dipforge/libs/LeviathanScriptEngine/src/com/rift/dipforge/ls/parser/Leviathan.g:101:4: ( variable ( assignment )? )*
            loop3:
            do {
                int alt3=2;
                switch ( input.LA(1) ) {
                case 50:
                    {
                    int LA3_1 = input.LA(2);

                    if ( (LA3_1==IDENT) ) {
                        int LA3_11 = input.LA(3);

                        if ( (LA3_11==28||LA3_11==33||(LA3_11 >= 37 && LA3_11 <= 38)||(LA3_11 >= 40 && LA3_11 <= 41)||LA3_11==43||(LA3_11 >= 47 && LA3_11 <= 48)||LA3_11==50||LA3_11==52) ) {
                            alt3=1;
                        }


                    }


                    }
                    break;
                case 47:
                    {
                    int LA3_2 = input.LA(2);

                    if ( (LA3_2==IDENT) ) {
                        int LA3_11 = input.LA(3);

                        if ( (LA3_11==28||LA3_11==33||(LA3_11 >= 37 && LA3_11 <= 38)||(LA3_11 >= 40 && LA3_11 <= 41)||LA3_11==43||(LA3_11 >= 47 && LA3_11 <= 48)||LA3_11==50||LA3_11==52) ) {
                            alt3=1;
                        }


                    }


                    }
                    break;
                case 48:
                    {
                    int LA3_3 = input.LA(2);

                    if ( (LA3_3==IDENT) ) {
                        int LA3_11 = input.LA(3);

                        if ( (LA3_11==28||LA3_11==33||(LA3_11 >= 37 && LA3_11 <= 38)||(LA3_11 >= 40 && LA3_11 <= 41)||LA3_11==43||(LA3_11 >= 47 && LA3_11 <= 48)||LA3_11==50||LA3_11==52) ) {
                            alt3=1;
                        }


                    }


                    }
                    break;
                case 41:
                    {
                    int LA3_4 = input.LA(2);

                    if ( (LA3_4==IDENT) ) {
                        int LA3_11 = input.LA(3);

                        if ( (LA3_11==28||LA3_11==33||(LA3_11 >= 37 && LA3_11 <= 38)||(LA3_11 >= 40 && LA3_11 <= 41)||LA3_11==43||(LA3_11 >= 47 && LA3_11 <= 48)||LA3_11==50||LA3_11==52) ) {
                            alt3=1;
                        }


                    }


                    }
                    break;
                case 43:
                    {
                    int LA3_5 = input.LA(2);

                    if ( (LA3_5==IDENT) ) {
                        int LA3_11 = input.LA(3);

                        if ( (LA3_11==28||LA3_11==33||(LA3_11 >= 37 && LA3_11 <= 38)||(LA3_11 >= 40 && LA3_11 <= 41)||LA3_11==43||(LA3_11 >= 47 && LA3_11 <= 48)||LA3_11==50||LA3_11==52) ) {
                            alt3=1;
                        }


                    }


                    }
                    break;
                case 38:
                    {
                    int LA3_6 = input.LA(2);

                    if ( (LA3_6==IDENT) ) {
                        int LA3_11 = input.LA(3);

                        if ( (LA3_11==28||LA3_11==33||(LA3_11 >= 37 && LA3_11 <= 38)||(LA3_11 >= 40 && LA3_11 <= 41)||LA3_11==43||(LA3_11 >= 47 && LA3_11 <= 48)||LA3_11==50||LA3_11==52) ) {
                            alt3=1;
                        }


                    }


                    }
                    break;
                case 37:
                    {
                    int LA3_7 = input.LA(2);

                    if ( (LA3_7==IDENT) ) {
                        int LA3_11 = input.LA(3);

                        if ( (LA3_11==28||LA3_11==33||(LA3_11 >= 37 && LA3_11 <= 38)||(LA3_11 >= 40 && LA3_11 <= 41)||LA3_11==43||(LA3_11 >= 47 && LA3_11 <= 48)||LA3_11==50||LA3_11==52) ) {
                            alt3=1;
                        }


                    }


                    }
                    break;
                case 33:
                    {
                    int LA3_8 = input.LA(2);

                    if ( (LA3_8==IDENT) ) {
                        int LA3_11 = input.LA(3);

                        if ( (LA3_11==28||LA3_11==33||(LA3_11 >= 37 && LA3_11 <= 38)||(LA3_11 >= 40 && LA3_11 <= 41)||LA3_11==43||(LA3_11 >= 47 && LA3_11 <= 48)||LA3_11==50||LA3_11==52) ) {
                            alt3=1;
                        }


                    }


                    }
                    break;
                case 40:
                    {
                    int LA3_9 = input.LA(2);

                    if ( (LA3_9==IDENT) ) {
                        int LA3_11 = input.LA(3);

                        if ( (LA3_11==28||LA3_11==33||(LA3_11 >= 37 && LA3_11 <= 38)||(LA3_11 >= 40 && LA3_11 <= 41)||LA3_11==43||(LA3_11 >= 47 && LA3_11 <= 48)||LA3_11==50||LA3_11==52) ) {
                            alt3=1;
                        }


                    }


                    }
                    break;

                }

                switch (alt3) {
            	case 1 :
            	    // /home/brett/Development/dipforge/dipforge/libs/LeviathanScriptEngine/src/com/rift/dipforge/ls/parser/Leviathan.g:101:5: variable ( assignment )?
            	    {
            	    pushFollow(FOLLOW_variable_in_workflow93);
            	    variable1=variable();

            	    state._fsp--;


            	    // /home/brett/Development/dipforge/dipforge/libs/LeviathanScriptEngine/src/com/rift/dipforge/ls/parser/Leviathan.g:101:14: ( assignment )?
            	    int alt2=2;
            	    int LA2_0 = input.LA(1);

            	    if ( (LA2_0==28) ) {
            	        alt2=1;
            	    }
            	    switch (alt2) {
            	        case 1 :
            	            // /home/brett/Development/dipforge/dipforge/libs/LeviathanScriptEngine/src/com/rift/dipforge/ls/parser/Leviathan.g:101:15: assignment
            	            {
            	            pushFollow(FOLLOW_assignment_in_workflow96);
            	            assignment2=assignment();

            	            state._fsp--;



            	                  variable1.setInitialValue(assignment2);
            	                

            	            }
            	            break;

            	    }



            	          value.getStatements().add(variable1);

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);


            // /home/brett/Development/dipforge/dipforge/libs/LeviathanScriptEngine/src/com/rift/dipforge/ls/parser/Leviathan.g:105:5: (meth1= method )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==33||(LA4_0 >= 37 && LA4_0 <= 38)||(LA4_0 >= 40 && LA4_0 <= 41)||LA4_0==43||(LA4_0 >= 47 && LA4_0 <= 48)||LA4_0==50) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // /home/brett/Development/dipforge/dipforge/libs/LeviathanScriptEngine/src/com/rift/dipforge/ls/parser/Leviathan.g:105:6: meth1= method
            	    {
            	    pushFollow(FOLLOW_method_in_workflow113);
            	    meth1=method();

            	    state._fsp--;


            	    value.getStatements().add(meth1);

            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);


            pushFollow(FOLLOW_block_in_workflow126);
            blo=block();

            state._fsp--;



                 value.getStatements().add(blo);
                 

            // /home/brett/Development/dipforge/dipforge/libs/LeviathanScriptEngine/src/com/rift/dipforge/ls/parser/Leviathan.g:109:5: (meth2= method )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==33||(LA5_0 >= 37 && LA5_0 <= 38)||(LA5_0 >= 40 && LA5_0 <= 41)||LA5_0==43||(LA5_0 >= 47 && LA5_0 <= 48)||LA5_0==50) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // /home/brett/Development/dipforge/dipforge/libs/LeviathanScriptEngine/src/com/rift/dipforge/ls/parser/Leviathan.g:109:6: meth2= method
            	    {
            	    pushFollow(FOLLOW_method_in_workflow137);
            	    meth2=method();

            	    state._fsp--;



            	        value.getStatements().add(meth2);
            	        

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);


            match(input,54,FOLLOW_54_in_workflow146); 

             
                  workflow = value;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return value;
    }
    // $ANTLR end "workflow"



    // $ANTLR start "annotation"
    // /home/brett/Development/dipforge/dipforge/libs/LeviathanScriptEngine/src/com/rift/dipforge/ls/parser/Leviathan.g:122:1: annotation returns [LsAnnotation value] : '@' name= IDENT '(' ( STRING )* ')' ;
    public final LsAnnotation annotation() throws RecognitionException {
        LsAnnotation value = null;


        Token name=null;
        Token STRING3=null;

        try {
            // /home/brett/Development/dipforge/dipforge/libs/LeviathanScriptEngine/src/com/rift/dipforge/ls/parser/Leviathan.g:123:3: ( '@' name= IDENT '(' ( STRING )* ')' )
            // /home/brett/Development/dipforge/dipforge/libs/LeviathanScriptEngine/src/com/rift/dipforge/ls/parser/Leviathan.g:123:5: '@' name= IDENT '(' ( STRING )* ')'
            {
            match(input,32,FOLLOW_32_in_annotation165); 

            name=(Token)match(input,IDENT,FOLLOW_IDENT_in_annotation169); 


                  value = new LsAnnotation((name!=null?name.getText():null));
                

            match(input,16,FOLLOW_16_in_annotation173); 

            // /home/brett/Development/dipforge/dipforge/libs/LeviathanScriptEngine/src/com/rift/dipforge/ls/parser/Leviathan.g:125:11: ( STRING )*
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( (LA6_0==STRING) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // /home/brett/Development/dipforge/dipforge/libs/LeviathanScriptEngine/src/com/rift/dipforge/ls/parser/Leviathan.g:125:12: STRING
            	    {
            	    STRING3=(Token)match(input,STRING,FOLLOW_STRING_in_annotation176); 


            	          value.addValue((STRING3!=null?STRING3.getText():null));
            	        

            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);


            match(input,17,FOLLOW_17_in_annotation181); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return value;
    }
    // $ANTLR end "annotation"



    // $ANTLR start "statement"
    // /home/brett/Development/dipforge/dipforge/libs/LeviathanScriptEngine/src/com/rift/dipforge/ls/parser/Leviathan.g:130:1: statement returns [Statement value] : (varCall= callStatement (ass1= assignment )? ( ';' )? |var= variable (ass2= assignment )? ( ';' )? | incrementStatement ';' |ifStat= ifStatement |whileStat= whileStatement |forStat= forStatement |bl= block |ret= returnStatement | 'continue' | 'break' ) ;
    public final Statement statement() throws RecognitionException {
        Statement value = null;


        CallStatement varCall =null;

        Assignment ass1 =null;

        Variable var =null;

        Assignment ass2 =null;

        IfStatement ifStat =null;

        WhileStatement whileStat =null;

        ForStatement forStat =null;

        Block bl =null;

        ReturnStatement ret =null;

